Bug 507104 - KmyMoney transaction search (in the ledger interface) doesn't find transactions
Summary: KmyMoney transaction search (in the ledger interface) doesn't find transactions
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-07-16 09:38 UTC by surcouf
Modified: 2025-07-19 12:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
kmy file to test ledger search on 22 anonymized transactions (7.79 KB, application/gzip)
2025-07-16 09:40 UTC, surcouf
Details
screnshot of the text search on "retrait" using version 5.1.3 (260.37 KB, image/png)
2025-07-16 09:41 UTC, surcouf
Details
screnshot of the text search on "retrait" using version 5.2.0 (119.37 KB, image/png)
2025-07-16 09:41 UTC, surcouf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description surcouf 2025-07-16 09:38:47 UTC
SUMMARY

KmyMoney transaction search (in the ledger, using Ctrl+F shortcut to activate it) doesn't find transactions

STEPS TO REPRODUCE
1. open KmyMoney (i tested using version 5.2.0-2cbd7a8)
2. Go to the ledger view of a current account for the here ATTACHED kmy file (see test file attached)
3. type "ctrl+F" (this should display a text search bar in the bottom part of the interface)
4. type "retrait" in the search bar


OBSERVED RESULT

no transaction result is shown

EXPECTED RESULT

22 transactions should be shown, because the word "retrait" is included in their category "Autres dépenses:Retrait d'espèces", as well as (for a few of them) in their split categories.
This result is actually properly shown in older versions (tested with version 5.1.3-eef04f1, see screenshot attached)

SOFTWARE/OS VERSIONS

Linux/KDE Plasma:  Debian 12 bookworm
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: see screenshots attached
Comment 1 surcouf 2025-07-16 09:40:09 UTC
Created attachment 183266 [details]
kmy file to test ledger search on 22 anonymized transactions
Comment 2 surcouf 2025-07-16 09:41:16 UTC
Created attachment 183268 [details]
screnshot of the text search on "retrait" using version 5.1.3
Comment 3 surcouf 2025-07-16 09:41:51 UTC
Created attachment 183269 [details]
screnshot of the text search on "retrait" using version 5.2.0
Comment 4 Thomas Baumgart 2025-07-18 16:18:52 UTC
Git commit 80ad52b03009a31a877bb8726e4a42880b062aa3 by Thomas Baumgart.
Committed on 18/07/2025 at 15:44.
Pushed by tbaumgart into branch 'master'.

Filter on account names in all splits of a transaction

The filter only searched in the account name of the split shown in the
ledger. This change makes sure that the entry matches if the provided
search text is found in any account name of all splits of the
transaction.
FIXED-IN: 5.2.1

M  +24   -18   kmymoney/models/ledgerfilter.cpp

https://invent.kde.org/office/kmymoney/-/commit/80ad52b03009a31a877bb8726e4a42880b062aa3
Comment 5 Thomas Baumgart 2025-07-19 12:41:48 UTC
Git commit 67c2bc59699e68cbb7de5b99f7c8f126bf67d92c by Thomas Baumgart.
Committed on 19/07/2025 at 11:42.
Pushed by tbaumgart into branch '5.2'.

Filter on account names in all splits of a transaction

The filter only searched in the account name of the split shown in the
ledger. This change makes sure that the entry matches if the provided
search text is found in any account name of all splits of the
transaction.
FIXED-IN: 5.2.1
(cherry picked from commit 80ad52b03009a31a877bb8726e4a42880b062aa3)

M  +24   -18   kmymoney/models/ledgerfilter.cpp

https://invent.kde.org/office/kmymoney/-/commit/67c2bc59699e68cbb7de5b99f7c8f126bf67d92c